# wasm-wedding-invitation

./: .gitignore  AGENTS.md  Cargo.toml  DEVELOP.md  Dioxus.toml  README.md  SURREALDB.md  build.rs  database.db  migrate.surql
assets/: main.css
assets/scss/: _components.scss  _hero.scss  _navigation.scss  _overlays.scss  _reset.scss  _sections.scss  _utilities.scss  _variables.scss  main.scss
config/: README.md  wedding.json
src/: config.rs  main.rs
src/components/: common.rs  hero.rs  mod.rs  navigation_bar.rs
src/components/home/: hero.rs  hero_foot.rs  mod.rs
src/components/main_content/: gift_section.rs  introduce_section.rs  location_section.rs  mod.rs  rsvp_section.rs  time_section.rs
src/database/: mod.rs
src/pages/: front_page.rs  invitation.rs  mod.rs  page_not_found.rs
