[package]
name = "wedding"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.44", features = ["serde"] }
dioxus = { version = "0.7.3", features = ["router", "logger"] }
dioxus-bulma = { version = "0.7" }
dioxus_style = "0.5.3"
dioxus-web = "0.7.3"
reqwest = { version = "0.13.2", features = ["json"] }
serde = "1.0.228"
serde_json = "1.0.149"
webbrowser = "1.2.0"

[build-dependencies]
sass-rs = "0.2"

[features]
default = ["web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
web = ["dioxus/web"]
